syntax = "proto3";

package pkg.position.v1;

option go_package = "github.com/cory-evans/gps-tracker-position/pkg/position/v1;positionv1";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Position Service";
		version: "1.0";
	};
};

message Position {
	string id = 1;
	double latitude = 2;
	double longitude = 3;
}

message GetPositionRequest {
	string id = 1;
}

message GetPositionResponse {
	Position position = 1;
}

service PositionService {
	rpc GetPosition(GetPositionRequest) returns (GetPositionResponse) {
		option (google.api.http) = {
			get: "/position/{id}"
		};
	}
}